--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@skynethq/content-record-library": "^0.2.1",
+    "@skynetlabs/content-record-library": "^0.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,9 +13,10 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "skynet-js": "^4.0.1-beta",
     "typescript": "^4.1.2",
-    "skynet-js": "^4.0.0-beta",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
