--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "paper": "^0.12.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paper-bindings": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "skynet-js": "^4.0.1-beta",
