--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "nanoid": "^3.1.22",
     "paper": "^0.12.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
