--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-paper-bindings": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "skynet-js": "^4.0.1-beta",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
